@@ -1,5 +1,7 @@
 package uk.gov.justice.laa.portal.landingpage.controller;
 
+import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -7,6 +9,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
+import jakarta.servlet.http.HttpSession;
 import org.apache.commons.lang3.StringUtils;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -26,6 +29,7 @@ import org.mockito.Mock;
 
 import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -43,19 +47,24 @@ import ch.qos.logback.core.read.ListAppender;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import org.springframework.web.servlet.mvc.support.RedirectAttributesModelMap;
 import uk.gov.justice.laa.portal.landingpage.auth.AuthenticatedUser;
+import uk.gov.justice.laa.portal.landingpage.config.UiLabelsProperties;
 import uk.gov.justice.laa.portal.landingpage.dto.AppDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AppRoleDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AuditTableSearchCriteria;
 import uk.gov.justice.laa.portal.landingpage.dto.AuditUserDetailDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AuditUserDto;
+import uk.gov.justice.laa.portal.landingpage.dto.DeleteUserAttemptAuditEvent;
 import uk.gov.justice.laa.portal.landingpage.dto.FirmDto;
 import uk.gov.justice.laa.portal.landingpage.dto.PaginatedAuditUsers;
+import uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason;
+import uk.gov.justice.laa.portal.landingpage.entity.DisableUserReason;
 import uk.gov.justice.laa.portal.landingpage.entity.EntraUser;
 import uk.gov.justice.laa.portal.landingpage.entity.Permission;
 import uk.gov.justice.laa.portal.landingpage.entity.UserProfileSilasStatus;
 import uk.gov.justice.laa.portal.landingpage.entity.UserType;
 import uk.gov.justice.laa.portal.landingpage.forms.FirmSearchForm;
 import uk.gov.justice.laa.portal.landingpage.forms.UserTypeForm;
+import uk.gov.justice.laa.portal.landingpage.model.DeletedUser;
 import uk.gov.justice.laa.portal.landingpage.repository.EntraUserRepository;
 import uk.gov.justice.laa.portal.landingpage.service.AccessControlService;
 import uk.gov.justice.laa.portal.landingpage.service.AuditExportService;
@@ -115,6 +124,9 @@ class AuditControllerTest {
     private EntraUserRepository entraUserRepository;
 
     @Mock
+    private UiLabelsProperties uiLabelsProperties;
+
+    @Mock
     private UserReactivationRequestService userReactivationRequestService;
 
     private PaginatedAuditUsers mockPaginatedUsers;
@@ -125,7 +137,7 @@ class AuditControllerTest {
     void setUp() {
         auditController = new AuditController(userService, loginService, eventService, accessControlService,
                 auditExportService, firmService, authenticatedUser, techServicesClient, userAccountStatusService, externalUserPollingService,
-                entraUserRepository, userReactivationRequestService);
+                entraUserRepository, userReactivationRequestService, uiLabelsProperties);
         model = new ExtendedModelMap();
 
         // Setup mock audit users
@@ -182,10 +194,13 @@ class AuditControllerTest {
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_INTERNAL_USER)).thenReturn(viewInternalUsers);
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER)).thenReturn(viewExternalUsers);
         when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedUserType(searchByUserType);
+        if (!StringUtils.isEmpty(searchByUserType) && !"ALL".equals(searchByUserType)) {
+            criteria.setSelectedUserTypes(List.of(searchByUserType));
+        }
 
         // When
         String viewName = auditController.displayAuditTable(criteria, model, mockAuthentication);
@@ -203,11 +218,52 @@ class AuditControllerTest {
         assertThat(model.getAttribute("sort")).isEqualTo("name");
         assertThat(model.getAttribute("direction")).isEqualTo("asc");
         assertThat(model.getAttribute("silasRoles")).isEqualTo(mockSilasRoles);
-        assertThat(model.getAttribute("selectedUserType")).isEqualTo(expectedUserType);
+        List<UserTypeForm> expectedSelectedUserTypes;
+        if (viewInternalUsers && viewExternalUsers) {
+            // User can see all types, show only what they explicitly selected
+            expectedSelectedUserTypes = (!StringUtils.isEmpty(searchByUserType) && !"ALL".equals(searchByUserType)
+                    && ((viewInternalUsers && "INTERNAL".equals(searchByUserType))
+                    || (viewExternalUsers && !viewInternalUsers && "EXTERNAL".equals(searchByUserType))))
+                    ? List.of(UserTypeForm.valueOf(searchByUserType))
+                    : List.of();
+        } else if (viewInternalUsers && !viewExternalUsers) {
+            // User can only see internal, show what they selected after filtering
+            if ("INTERNAL".equals(searchByUserType)) {
+                expectedSelectedUserTypes = List.of(UserTypeForm.INTERNAL);
+            } else if ("EXTERNAL".equals(searchByUserType) || StringUtils.isEmpty(searchByUserType) || "ALL".equals(searchByUserType)) {
+                // Selected invalid/nothing, show empty after filtering
+                expectedSelectedUserTypes = List.of();
+            } else {
+                expectedSelectedUserTypes = List.of();
+            }
+        } else {
+            // User can only see external, show what they selected after filtering
+            if ("EXTERNAL".equals(searchByUserType)) {
+                expectedSelectedUserTypes = List.of(UserTypeForm.EXTERNAL);
+            } else if ("INTERNAL".equals(searchByUserType) || StringUtils.isEmpty(searchByUserType) || "ALL".equals(searchByUserType)) {
+                // Selected invalid/nothing, show empty after filtering
+                expectedSelectedUserTypes = List.of();
+            } else {
+                expectedSelectedUserTypes = List.of();
+            }
+        }
+        assertThat(model.getAttribute("selectedUserTypes")).isEqualTo(expectedSelectedUserTypes);
 
-        UserTypeForm userTypeForm = StringUtils.isEmpty(userTypeusedInService) ? null : UserTypeForm.valueOf(userTypeusedInService);
+        List<UserTypeForm> expectedUserTypesForService;
+        if (viewInternalUsers && viewExternalUsers) {
+            // User can see all types, pass what they selected
+            expectedUserTypesForService = (!StringUtils.isEmpty(searchByUserType) && !"ALL".equals(searchByUserType))
+                    ? List.of(UserTypeForm.valueOf(searchByUserType))
+                    : List.of();
+        } else if (viewInternalUsers && !viewExternalUsers) {
+            // User can only see internal, default to INTERNAL if selection is empty or invalid
+            expectedUserTypesForService = List.of(UserTypeForm.INTERNAL);
+        } else {
+            // User can only see external, default to EXTERNAL if selection is empty or invalid
+            expectedUserTypesForService = List.of(UserTypeForm.EXTERNAL);
+        }
         verify(userService, times(1)).getAuditUsers("", null, null, null,
-                userTypeForm, 1, 10, "name", "asc", false, null);
+                expectedUserTypesForService, 1, 10, "name", "asc", false, null, null, null, List.of());
         verify(userService, times(1)).getAllSilasRoles();
     }
 
@@ -216,7 +272,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(eq("john"), any(), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSearch("john");
@@ -228,7 +284,7 @@ class AuditControllerTest {
         assertThat(viewName).isEqualTo("user-audit/users");
         assertThat(model.getAttribute("search")).isEqualTo("john");
 
-        verify(userService, times(1)).getAuditUsers("john", null, null, null, null,  1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("john", null, null, null, List.of(),  1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -237,7 +293,7 @@ class AuditControllerTest {
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         UUID firmId = UUID.randomUUID();
         when(userService.getAuditUsers(anyString(), eq(firmId), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedFirmId(firmId.toString());
@@ -248,7 +304,7 @@ class AuditControllerTest {
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
 
-        verify(userService, times(1)).getAuditUsers("", firmId, null, null, null,  1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", firmId, null, null, List.of(),  1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -256,7 +312,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(anyString(), isNull(), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedFirmId("invalid-uuid");
@@ -267,7 +323,7 @@ class AuditControllerTest {
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null,  1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(),  1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -275,7 +331,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(anyString(), any(), eq("Global Admin"), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSilasRole("Global Admin");
@@ -287,7 +343,7 @@ class AuditControllerTest {
         assertThat(viewName).isEqualTo("user-audit/users");
         assertThat(model.getAttribute("selectedSilasRole")).isEqualTo("Global Admin");
 
-        verify(userService, times(1)).getAuditUsers("", null, "Global Admin", null, null, 1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, "Global Admin", null, List.of(), 1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -295,7 +351,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), eq(25),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSize(25);
@@ -307,7 +363,7 @@ class AuditControllerTest {
         assertThat(viewName).isEqualTo("user-audit/users");
         assertThat(model.getAttribute("requestedPageSize")).isEqualTo(25);
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null, 1, 25, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 25, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -315,7 +371,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), eq(2), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setPage(2);
@@ -327,7 +383,7 @@ class AuditControllerTest {
         assertThat(viewName).isEqualTo("user-audit/users");
         assertThat(model.getAttribute("page")).isEqualTo(2);
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null, 2, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 2, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -335,7 +391,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(anyString(), any(), anyString(), any(), any(), anyInt(), anyInt(),
-                eq("email"), eq("desc"), eq(false), any())).thenReturn(mockPaginatedUsers);
+                eq("email"), eq("desc"), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSilasRole("");
@@ -350,7 +406,7 @@ class AuditControllerTest {
         assertThat(model.getAttribute("sort")).isEqualTo("email");
         assertThat(model.getAttribute("direction")).isEqualTo("desc");
 
-        verify(userService, times(1)).getAuditUsers("", null, "", null, null, 1, 10, "email", "desc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, "", null, List.of(), 1, 10, "email", "desc", false, null, null, null, List.of());
     }
 
     @Test
@@ -359,7 +415,7 @@ class AuditControllerTest {
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         UUID firmId = UUID.randomUUID();
         when(userService.getAuditUsers(eq("test"), eq(firmId), eq("Global Admin"), any(), any(), eq(2), eq(25),
-                eq("email"), eq("desc"), eq(false), any())).thenReturn(mockPaginatedUsers);
+                eq("email"), eq("desc"), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSearch("test");
@@ -383,8 +439,8 @@ class AuditControllerTest {
         assertThat(model.getAttribute("sort")).isEqualTo("email");
         assertThat(model.getAttribute("direction")).isEqualTo("desc");
 
-        verify(userService, times(1)).getAuditUsers("test", firmId, "Global Admin", null, null,  2, 25, "email",
-                "desc", false, null);
+        verify(userService, times(1)).getAuditUsers("test", firmId, "Global Admin", null, List.of(),  2, 25, "email",
+                "desc", false, null, null, null, List.of());
     }
 
     @Test
@@ -399,7 +455,7 @@ class AuditControllerTest {
                 .build();
 
         when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(emptyResults);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(emptyResults);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
 
@@ -418,7 +474,7 @@ class AuditControllerTest {
     void displayAuditTable_withFirmSearchText_setsFirmSearchForm() {
         // Given
         when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setFirmSearch("Test Firm");
@@ -437,7 +493,7 @@ class AuditControllerTest {
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         UUID appId = UUID.randomUUID();
         when(userService.getAuditUsers(anyString(), any(), any(), eq(appId), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedAppId(appId.toString());
@@ -448,7 +504,7 @@ class AuditControllerTest {
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
 
-        verify(userService, times(1)).getAuditUsers("", null, null, appId, null, 1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, appId, List.of(), 1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -456,7 +512,7 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(anyString(), any(), any(), eq(null), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         ListAppender<ILoggingEvent> listAppender = LogMonitoring
                 .addListAppenderToLogger(AuditTableSearchCriteria.class);
@@ -474,7 +530,7 @@ class AuditControllerTest {
         assertThat(logEvents.size()).isEqualTo(1);
         ILoggingEvent logEvent = logEvents.getFirst();
         assertThat(logEvent.getFormattedMessage()).isEqualTo("Invalid app ID format: " + selectedAppId);
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null, 1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -482,8 +538,8 @@ class AuditControllerTest {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         String userType = "invalidUserType";
-        when(userService.getAuditUsers(anyString(), any(), any(), any(), eq(null), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), eq(List.of()), anyInt(), anyInt(),
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         ListAppender<ILoggingEvent> listAppender = LogMonitoring
                 .addListAppenderToLogger(AuditTableSearchCriteria.class);
@@ -500,15 +556,15 @@ class AuditControllerTest {
         assertThat(logEvents.size()).isEqualTo(1);
         ILoggingEvent logEvent = logEvents.getFirst();
         assertThat(logEvent.getFormattedMessage()).isEqualTo("Invalid user type provided: " + userType);
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null,  1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(),  1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
     void displayAuditTable_withUserTypeNull_logsError() {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
-        when(userService.getAuditUsers(anyString(), any(), any(), any(), eq(null), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), eq(List.of()), anyInt(), anyInt(),
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
 
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
@@ -520,16 +576,16 @@ class AuditControllerTest {
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null,  1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(),  1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
     void displayAuditTable_withUserType_filtersResults() {
         // Given
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
-        when(userService.getAuditUsers(anyString(), any(), any(), any(), eq(UserTypeForm.INTERNAL), anyInt(),
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(),
                 anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedUserType(UserTypeForm.INTERNAL.name());
@@ -539,18 +595,20 @@ class AuditControllerTest {
 
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
-        assertThat(model.getAttribute("selectedUserType")).isEqualTo("INTERNAL");
+        assertThat(model.getAttribute("selectedUserTypes")).isEqualTo(List.of());
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, UserTypeForm.INTERNAL, 1, 10, "name",
-                "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name",
+                "asc", false, null, null, null, List.of());
     }
 
 
     @Test
     void displayAuditTable_withMultiFirm_filtersResults() {
         // Given
+        when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_INTERNAL_USER)).thenReturn(true);
+        when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER)).thenReturn(true);
         when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedUserType(UserTypeForm.MULTI_FIRM.name());
@@ -560,10 +618,10 @@ class AuditControllerTest {
 
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
-        assertThat(model.getAttribute("selectedUserType")).isEqualTo("MULTI_FIRM");
+        assertThat(model.getAttribute("selectedUserTypes")).isEqualTo(List.of());
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, UserTypeForm.MULTI_FIRM, 1, 10, "name",
-                "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name",
+                "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -572,7 +630,7 @@ class AuditControllerTest {
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         String selectedAppId = "";
         when(userService.getAuditUsers(anyString(), any(), any(), eq(null), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
         criteria.setSelectedAppId(selectedAppId);
@@ -583,7 +641,7 @@ class AuditControllerTest {
         // Then
         assertThat(viewName).isEqualTo("user-audit/users");
 
-        verify(userService, times(1)).getAuditUsers("", null, null, null, null, 1, 10, "name", "asc", false, null);
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name", "asc", false, null, null, null, List.of());
     }
 
     @Test
@@ -988,236 +1046,153 @@ class AuditControllerTest {
     }
 
     @Test
-    void deleteUserWithoutProfileConfirm_shouldReturnConfirmationView() {
-        // Given
+    void deleteUserAudit_whenValidReason_shouldRedirectToCheckAnswer() {
+
         String entraUserId = UUID.randomUUID().toString();
-        AuditUserDetailDto userDetail = AuditUserDetailDto.builder()
-                .userId(null)
-                .firstName("John")
-                .lastName("Doe")
-                .fullName("John Doe")
-                .email("john.doe@example.com")
-                .profiles(Collections.emptyList())
-                .hasNoProfile(true)
-                .build();
-
-        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId)))
-                .thenReturn(userDetail);
-
-        // When
-        String viewName = auditController.deleteUserWithoutProfileConfirm(entraUserId, model);
-
-        // Then
-        assertThat(viewName).isEqualTo("user-audit/delete-user-without-profile-reason");
-        assertThat(model.getAttribute("user")).isEqualTo(userDetail);
-        assertThat(model.getAttribute("pageTitle")).isEqualTo("Remove access - John Doe");
-        verify(userService).getAuditUserDetailByEntraId(UUID.fromString(entraUserId));
-    }
-
-    @Test
-    void deleteUserWithoutProfileConfirm_populatesDeleteReasonsInModel() {
-        // Given
-        String entraUserId = UUID.randomUUID().toString();
-        AuditUserDetailDto userDetail = AuditUserDetailDto.builder()
-                .userId(null)
-                .firstName("John")
-                .lastName("Doe")
-                .fullName("John Doe")
-                .email("john.doe@example.com")
-                .profiles(Collections.emptyList())
-                .hasNoProfile(true)
-                .build();
-
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason reason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("CyberRisk").label("Cyber risk").build();
-        reason.setId(UUID.randomUUID());
+        String reasonId = UUID.randomUUID().toString();
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
+        DeleteUserReason deleteReason = DeleteUserReason.builder().label("Test reason").build();
+        deleteReason.setId(UUID.fromString(reasonId));
 
         when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId))).thenReturn(userDetail);
-        when(userService.getDeleteUserReasons(true)).thenReturn(List.of(reason));
+        when(userService.getDeleteUserReasons(true)).thenReturn(List.of(deleteReason));
 
-        // When
-        String viewName = auditController.deleteUserWithoutProfileConfirm(entraUserId, model);
+        HttpSession session = mock(HttpSession.class);
+        RedirectAttributes redirectAttributes = mock(RedirectAttributes.class);
+        String viewName = auditController.deleteUserAudit(entraUserId, reasonId, session, model, redirectAttributes);
 
-        // Then
-        assertThat(viewName).isEqualTo("user-audit/delete-user-without-profile-reason");
-        @SuppressWarnings("unchecked")
-        List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel> reasons =
-                (List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel>) model.getAttribute("deleteReasons");
-        assertThat(reasons).hasSize(1);
-        assertThat(reasons.get(0).getCode()).isEqualTo("CyberRisk");
-        verify(userService).getDeleteUserReasons(true);
+        assertThat(viewName).isEqualTo("redirect:/admin/users/audit/entra/{id}/delete/check-answer");
+        verify(redirectAttributes).addAttribute("id", entraUserId);
+        verify(session).setAttribute("deleteReasonId", UUID.fromString(reasonId));
     }
 
     @Test
-    void deleteUserWithoutProfile_withValidReason_shouldDeleteAndReturnSuccess() {
-        // Given
+    void deleteUserAuditCheckAnswer_shouldDisplayPage() {
+
+        UUID reasonId = UUID.randomUUID();
         String entraUserId = UUID.randomUUID().toString();
-        String reasonId = UUID.randomUUID().toString();
-        UUID currentUserId = UUID.randomUUID();
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
+        DeleteUserReason deleteReason = DeleteUserReason.builder().label("Test reason").build();
+        deleteReason.setId(reasonId);
+        HttpSession session = mock(HttpSession.class);
 
-        AuditUserDetailDto userDetail = AuditUserDetailDto.builder()
-                .userId(null)
-                .firstName("Jane")
-                .lastName("Smith")
-                .fullName("Jane Smith")
-                .email("jane.smith@example.com")
-                .profiles(Collections.emptyList())
-                .hasNoProfile(true)
-                .build();
+        when(session.getAttribute("deleteReasonId")).thenReturn(reasonId);
+        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId))).thenReturn(userDetail);
+        when(userService.getDeleteUserReasons(true)).thenReturn(List.of(deleteReason));
 
-        uk.gov.justice.laa.portal.landingpage.entity.EntraUser currentUser = uk.gov.justice.laa.portal.landingpage.entity.EntraUser
-                .builder()
-                .id(currentUserId)
-                .entraOid(entraUserId)
-                .firstName("Admin")
-                .lastName("User")
-                .email("admin@example.com")
-                .build();
+        String viewName = auditController.deleteUserAuditCheckAnswer(entraUserId, session, model, mock(RedirectAttributes.class));
 
-        final uk.gov.justice.laa.portal.landingpage.model.DeletedUser deletedUser = uk.gov.justice.laa.portal.landingpage.model.DeletedUser
-                .builder()
-                .deletedUserId(UUID.fromString(entraUserId))
-                .deletedUserEntraOid(entraUserId)
-                .removedRolesCount(0)
-                .detachedOfficesCount(0)
-                .build();
+        assertThat(viewName).isEqualTo("user-audit/delete-user-check-answer");
+        assertThat(model.getAttribute("user")).isEqualTo(userDetail);
+        assertThat(model.getAttribute("deleteReason")).isEqualTo(deleteReason);
+    }
+
+    @Test
+    void deleteUserAuditCheckAnswer_whenSessionMissingReason_shouldRedirect() {
+
+        String entraUserId = UUID.randomUUID().toString();
+        HttpSession session = mock(HttpSession.class);
+        when(session.getAttribute("deleteReasonId")).thenReturn(null);
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
 
         when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId)))
                 .thenReturn(userDetail);
-        when(loginService.getCurrentEntraUser(any())).thenReturn(currentUser);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
-        deleteReason.setId(UUID.fromString(reasonId));
+
+        RedirectAttributes redirectAttributes = mock(RedirectAttributes.class);
+        String viewName = auditController.deleteUserAuditCheckAnswer(entraUserId, session, model, redirectAttributes);
+
+        assertThat(viewName).isEqualTo("redirect:/admin/users/audit/entra/{id}/delete");
+        verify(redirectAttributes).addAttribute("id", entraUserId);
+    }
+
+    @Test
+    void confirmDeleteUserAudit_whenDeleteSucceeds_shouldShowSuccessPage() {
+
+        UUID reasonId = UUID.randomUUID();
+        UUID currentUserId = UUID.randomUUID();
+        HttpSession session = mock(HttpSession.class);
+
+        when(session.getAttribute("deleteReasonId")).thenReturn(reasonId);
+
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
+        DeleteUserReason deleteReason = DeleteUserReason.builder().label("Test reason").build();
+        deleteReason.setId(reasonId);
+
+        EntraUser currentUser = EntraUser.builder().id(currentUserId).entraOid(UUID.randomUUID().toString()).build();
+        DeletedUser deletedUser = mock(DeletedUser.class);
+
+        String entraUserId = UUID.randomUUID().toString();
+        when(deletedUser.getDeleteReasonLabel()).thenReturn("Test reason");
+        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId))).thenReturn(userDetail);
         when(userService.getDeleteUserReasons(true)).thenReturn(List.of(deleteReason));
-        when(userService.deleteEntraUserWithoutProfile(eq(entraUserId), any(UUID.class), any(UUID.class)))
-                .thenReturn(deletedUser);
+        when(loginService.getCurrentEntraUser(any())).thenReturn(currentUser);
+        when(userService.getUserProfilesByEntraUserId(UUID.fromString(entraUserId))).thenReturn(Collections.emptyList());
+        when(userService.deleteEntraUserWithoutProfile(anyString(), any(UUID.class), any(UUID.class))).thenReturn(deletedUser);
 
-        // When
-        String viewName = auditController.deleteUserWithoutProfile(
-                entraUserId, reasonId, null, null, model);
+        String viewName = auditController.confirmDeleteUserAudit(entraUserId, mockAuthentication, session, model, mock(RedirectAttributes.class));
 
-        // Then
         assertThat(viewName).isEqualTo("user-audit/delete-user-success");
-        assertThat(model.getAttribute("deletedUserFullName")).isEqualTo("Jane Smith");
-        assertThat(model.getAttribute("pageTitle")).isEqualTo("User deleted");
-        verify(userService).deleteEntraUserWithoutProfile(eq(entraUserId), any(UUID.class), any(UUID.class));
-        verify(eventService).logEvent(any(uk.gov.justice.laa.portal.landingpage.dto.DeleteUserSuccessAuditEvent.class));
+        verify(session).removeAttribute("deleteReasonId");
     }
 
     @Test
-    void deleteUserWithoutProfile_withShortReason_shouldReturnValidationError() {
-        // Given
+    void confirmDeleteUserAudit_whenSessionMissingReason_shouldRedirect() {
+
         String entraUserId = UUID.randomUUID().toString();
-        String shortReason = "short";
+        HttpSession session = mock(HttpSession.class);
 
-        AuditUserDetailDto userDetail = AuditUserDetailDto.builder()
-                .userId(null)
-                .firstName("Bob")
-                .lastName("Jones")
-                .fullName("Bob Jones")
-                .email("bob.jones@example.com")
-                .profiles(Collections.emptyList())
-                .hasNoProfile(true)
-                .build();
+        when(session.getAttribute("deleteReasonId")).thenReturn(null);
 
-        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId)))
-                .thenReturn(userDetail);
-        when(userService.getDeleteUserReasons(true)).thenReturn(Collections.emptyList());
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
+        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId))).thenReturn(userDetail);
 
-        // When
-        String viewName = auditController.deleteUserWithoutProfile(
-                entraUserId, shortReason, null, null, model);
+        RedirectAttributes redirectAttributes = mock(RedirectAttributes.class);
+        String viewName = auditController.confirmDeleteUserAudit(entraUserId, mockAuthentication, session, model, redirectAttributes);
 
-        // Then
-        assertThat(viewName).isEqualTo("user-audit/delete-user-without-profile-reason");
-        assertThat(model.getAttribute("user")).isEqualTo(userDetail);
-        assertThat(model.getAttribute("fieldErrorMessage"))
-                .isEqualTo("Please select a valid reason.");
-        assertThat(model.getAttribute("pageTitle")).isEqualTo("Remove access - Bob Jones");
-        verify(userService, times(0)).deleteEntraUserWithoutProfile(anyString(), any(UUID.class), any());
+        assertThat(viewName).isEqualTo("redirect:/admin/users/audit/entra/{id}/delete");
+
+        verify(redirectAttributes).addAttribute("id", entraUserId);
+        verify(userService, never()).deleteEntraUserWithoutProfile(anyString(), any(), any());
     }
 
     @Test
-    void deleteUserWithoutProfile_withNullReason_shouldReturnValidationError() {
-        // Given
-        String entraUserId = UUID.randomUUID().toString();
+    void confirmDeleteUserAudit_whenDeleteFails_shouldReturnErrorView() {
 
-        AuditUserDetailDto userDetail = AuditUserDetailDto.builder()
-                .userId(null)
-                .firstName("Alice")
-                .lastName("Brown")
-                .fullName("Alice Brown")
-                .email("alice.brown@example.com")
-                .profiles(Collections.emptyList())
-                .hasNoProfile(true)
-                .build();
-
-        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId)))
-                .thenReturn(userDetail);
-        when(userService.getDeleteUserReasons(true)).thenReturn(Collections.emptyList());
-
-        // When
-        String viewName = auditController.deleteUserWithoutProfile(
-                entraUserId, null, null, null, model);
-
-        // Then
-        assertThat(viewName).isEqualTo("user-audit/delete-user-without-profile-reason");
-        assertThat(model.getAttribute("fieldErrorMessage"))
-                .isEqualTo("Please select a reason.");
-        verify(userService, times(0)).deleteEntraUserWithoutProfile(anyString(), any(UUID.class), any());
-    }
-
-    @Test
-    void deleteUserWithoutProfile_whenDeleteFails_shouldReturnErrorView() {
-        // Given
-        String entraUserId = UUID.randomUUID().toString();
-        String reasonId = UUID.randomUUID().toString();
+        UUID reasonId = UUID.randomUUID();
         UUID currentUserId = UUID.randomUUID();
+        String entraUserId = UUID.randomUUID().toString();
+        HttpSession session = mock(HttpSession.class);
 
-        AuditUserDetailDto userDetail = AuditUserDetailDto.builder()
-                .userId(null)
-                .firstName("Charlie")
-                .lastName("Wilson")
-                .fullName("Charlie Wilson")
-                .email("charlie.wilson@example.com")
-                .profiles(Collections.emptyList())
-                .hasNoProfile(true)
-                .build();
+        when(session.getAttribute("deleteReasonId")).thenReturn(reasonId);
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
+        DeleteUserReason deleteReason = DeleteUserReason.builder().label("Test reason").build();
+        deleteReason.setId(reasonId);
+        EntraUser currentUser = EntraUser.builder().id(currentUserId).entraOid(UUID.randomUUID().toString()).build();
 
-        uk.gov.justice.laa.portal.landingpage.entity.EntraUser currentUser = uk.gov.justice.laa.portal.landingpage.entity.EntraUser
-                .builder()
-                .id(currentUserId)
-                .entraOid(entraUserId)
-                .firstName("Admin")
-                .lastName("User")
-                .email("admin@example.com")
-                .build();
-
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
-        deleteReason.setId(UUID.fromString(reasonId));
-
-        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId)))
-                .thenReturn(userDetail);
-        when(loginService.getCurrentEntraUser(any())).thenReturn(currentUser);
+        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId))).thenReturn(userDetail);
         when(userService.getDeleteUserReasons(true)).thenReturn(List.of(deleteReason));
-        when(userService.deleteEntraUserWithoutProfile(eq(entraUserId), any(UUID.class), any(UUID.class)))
-                .thenThrow(new RuntimeException("Failed to delete user from Entra"));
+        when(loginService.getCurrentEntraUser(any())).thenReturn(currentUser);
+        when(userService.getUserProfilesByEntraUserId(UUID.fromString(entraUserId))).thenReturn(Collections.emptyList());
+        when(userService.deleteEntraUserWithoutProfile(anyString(), any(UUID.class), any(UUID.class))).thenThrow(new RuntimeException("Failed to delete user"));
 
-        // When
-        String viewName = auditController.deleteUserWithoutProfile(
-                entraUserId, reasonId, null, null, model);
+        String viewName = auditController.confirmDeleteUserAudit(entraUserId, mockAuthentication, session, model, mock(RedirectAttributes.class));
 
-        // Then
-        assertThat(viewName).isEqualTo("user-audit/delete-user-without-profile-reason");
-        assertThat(model.getAttribute("user")).isEqualTo(userDetail);
-        assertThat(model.getAttribute("globalErrorMessage"))
-                .isEqualTo("User delete failed, please try again later");
-        assertThat(model.getAttribute("pageTitle")).isEqualTo("Remove access - Charlie Wilson");
-        verify(eventService).logEvent(any(uk.gov.justice.laa.portal.landingpage.dto.DeleteUserAttemptAuditEvent.class));
+        assertThat(viewName).isEqualTo("user-audit/delete-user-check-answer");
+        assertThat(model.getAttribute("globalErrorMessage")).isEqualTo("User delete failed, please try again later");
+        verify(eventService).logEvent(any(DeleteUserAttemptAuditEvent.class));
+    }
+
+    @Test
+    void deleteUserAudit_whenReasonMissing_shouldReturnValidationError() {
+
+        String entraUserId = UUID.randomUUID().toString();
+        AuditUserDetailDto userDetail = AuditUserDetailDto.builder().fullName("Charlie Wilson").build();
+        when(userService.getAuditUserDetailByEntraId(UUID.fromString(entraUserId))).thenReturn(userDetail);
+        String viewName = auditController.deleteUserAudit(entraUserId, null, mock(HttpSession.class), model,
+                mock(RedirectAttributes.class));
+
+        assertThat(viewName).isEqualTo("user-audit/delete-user-reason");
+        assertThat(model.getAttribute("fieldErrorMessage")).isEqualTo("Please select a reason.");
     }
 
     @Test
@@ -1252,10 +1227,10 @@ class AuditControllerTest {
 
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(
-                eq("TestSearch"), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page1);
+                eq("TestSearch"), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page1);
 
         when(userService.getAuditUsers(
-                eq("TestSearch"), any(), any(), any(), any(), eq(2), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page2);
+                eq("TestSearch"), any(), any(), any(), any(), eq(2), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page2);
 
         byte[] csvBytes = "Name,Email\nP1,p1@example.com\n".getBytes(java.nio.charset.StandardCharsets.UTF_8);
         AuditExportService.AuditCsvExport export = new AuditExportService.AuditCsvExport("audit.csv", csvBytes);
@@ -1271,8 +1246,8 @@ class AuditControllerTest {
         assertThat(headers.getContentDisposition().getType()).isEqualTo("attachment");
         assertThat(headers.getContentDisposition().getFilename()).isEqualTo("audit.csv");
 
-        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, null, 1, 500, "name", "asc", true, null);
-        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, null, 2, 500, "name", "asc", true, null);
+        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, List.of(), 1, 500, "name", "asc", true, null, null, null, List.of());
+        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, List.of(), 2, 500, "name", "asc", true, null, null, null, List.of());
         verify(auditExportService, times(1)).downloadAuditCsv(any(), any(), any());
     }
 
@@ -1309,10 +1284,10 @@ class AuditControllerTest {
 
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(
-                eq("TestSearch"), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page1);
+                eq("TestSearch"), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page1);
 
         when(userService.getAuditUsers(
-                eq("TestSearch"), any(), any(), any(), any(), eq(2), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page2);
+                eq("TestSearch"), any(), any(), any(), any(), eq(2), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page2);
 
         byte[] csvBytes = "Name,Email\nP1,p1@example.com\n".getBytes(java.nio.charset.StandardCharsets.UTF_8);
         AuditExportService.AuditCsvExport export = new AuditExportService.AuditCsvExport("audit.csv", csvBytes);
@@ -1328,8 +1303,8 @@ class AuditControllerTest {
         assertThat(headers.getContentDisposition().getType()).isEqualTo("attachment");
         assertThat(headers.getContentDisposition().getFilename()).isEqualTo("audit.csv");
 
-        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, null, 1, 500, "name", "asc", true, true);
-        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, null, 2, 500, "name", "asc", true, true);
+        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, List.of(), 1, 500, "name", "asc", true, true, null, null, List.of());
+        verify(userService, times(1)).getAuditUsers("TestSearch", selectedFirmId, null, null, List.of(), 2, 500, "name", "asc", true, true, null, null, List.of());
         verify(auditExportService, times(1)).downloadAuditCsv(any(), any(), any());
     }
 
@@ -1364,10 +1339,10 @@ class AuditControllerTest {
 
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
         when(userService.getAuditUsers(
-                eq("TestSearch"), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page1);
+                eq("TestSearch"), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page1);
 
         when(userService.getAuditUsers(
-                eq("TestSearch"), any(), any(), any(), any(), eq(2), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page2);
+                eq("TestSearch"), any(), any(), any(), any(), eq(2), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page2);
 
         byte[] csvBytes = "Name,Email\nP1,p1@example.com\n".getBytes(java.nio.charset.StandardCharsets.UTF_8);
         AuditExportService.AuditCsvExport export = new AuditExportService.AuditCsvExport("audit.csv", csvBytes);
@@ -1384,9 +1359,9 @@ class AuditControllerTest {
         assertThat(headers.getContentDisposition().getFilename()).isEqualTo("audit.csv");
 
         verify(userService, times(1)).getAuditUsers("TestSearch", null,
-                null, null, UserTypeForm.INTERNAL, 1, 500, "name", "asc", true, null);
+                null, null, List.of(), 1, 500, "name", "asc", true, null, null, null, List.of());
         verify(userService, times(1)).getAuditUsers("TestSearch", null,
-                null, null, UserTypeForm.INTERNAL, 2, 500, "name", "asc", true, null);
+                null, null, List.of(), 2, 500, "name", "asc", true, null, null, null, List.of());
         verify(auditExportService, times(1)).downloadAuditCsv(any(), any(), any());
     }
 
@@ -1425,7 +1400,7 @@ class AuditControllerTest {
                 .build();
 
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
-        when(userService.getAuditUsers(eq(""), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(page);
+        when(userService.getAuditUsers(eq(""), any(), any(), any(), any(), eq(1), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(page);
 
         byte[] csvBytes = "Name,Email\nP1,p1@example.com\n".getBytes(java.nio.charset.StandardCharsets.UTF_8);
         AuditExportService.AuditCsvExport export = new AuditExportService.AuditCsvExport("audit.csv", csvBytes);
@@ -1484,6 +1459,104 @@ class AuditControllerTest {
     }
 
     @Test
+    void displayAuditTable_withCreatedDateRange_filtersResults() {
+        // Given
+        LocalDate fromDate = LocalDate.of(2024, 1, 1);
+        LocalDate toDate = LocalDate.of(2024, 12, 31);
+        when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
+                anyString(), anyString(), eq(false), any(), eq(fromDate), eq(toDate), any())).thenReturn(mockPaginatedUsers);
+        when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
+        
+        AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
+        criteria.setCreatedFrom(fromDate);
+        criteria.setCreatedTo(toDate);
+
+        // When
+        String viewName = auditController.displayAuditTable(criteria, model, mockAuthentication);
+
+        // Then
+        assertThat(viewName).isEqualTo("user-audit/users");
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name", "asc", false, null, fromDate, toDate, criteria.getSelectedSilasStatuses());
+    }
+
+    @Test
+    void displayAuditTable_withCreatedDateRangeString_filtersResults() {
+        // Given
+        LocalDate fromDate = LocalDate.of(2024, 1, 1);
+        LocalDate toDate = LocalDate.of(2024, 12, 31);
+        when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
+                anyString(), anyString(), eq(false), any(), eq(fromDate), eq(toDate), any())).thenReturn(mockPaginatedUsers);
+        when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
+
+        AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
+        criteria.setCreatedFrom("01/01/2024");
+        criteria.setCreatedTo("31/12/2024");
+
+        // When
+        String viewName = auditController.displayAuditTable(criteria, model, mockAuthentication);
+
+        // Then
+        assertThat(viewName).isEqualTo("user-audit/users");
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name", "asc", false, null, fromDate, toDate, criteria.getSelectedSilasStatuses());
+    }
+
+    @Test
+    void displayAuditTable_withSilasStatuses_filtersResults() {
+        // Given
+        when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
+                anyString(), anyString(), eq(false), any(), any(), any(),
+                org.mockito.ArgumentMatchers.<UserProfileSilasStatus>anyList())).thenReturn(mockPaginatedUsers);
+        when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
+        
+        List<String> selectedStatuses = List.of("COMPLETE", "DISABLED");
+        List<UserProfileSilasStatus> expectedStatuses = List.of(
+                UserProfileSilasStatus.COMPLETE,
+                UserProfileSilasStatus.DISABLED);
+        
+        AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
+        criteria.setSelectedSilasStatuses(selectedStatuses);
+
+        // When
+        String viewName = auditController.displayAuditTable(criteria, model, mockAuthentication);
+
+        // Then
+        assertThat(viewName).isEqualTo("user-audit/users");
+        verify(userService, times(1)).getAuditUsers("", null, null, null, List.of(), 1, 10, "name", "asc", false, null, null, null, expectedStatuses);
+    }
+
+    @Test
+    void displayAuditTable_withInvalidSilasStatus_logsWarning() {
+        // Given
+        when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(true);
+        when(userService.getAuditUsers(anyString(), any(), any(), any(), any(), anyInt(), anyInt(),
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
+        when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
+        
+        // Set up logging capture
+        ch.qos.logback.classic.Logger logger = (ch.qos.logback.classic.Logger) 
+            org.slf4j.LoggerFactory.getLogger(AuditTableSearchCriteria.class);
+        ListAppender<ILoggingEvent> listAppender = new ListAppender<>();
+        listAppender.start();
+        logger.addAppender(listAppender);
+        
+        AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
+        criteria.setSelectedSilasStatuses(java.util.List.of("INVALID_STATUS"));
+
+        // When
+        String viewName = auditController.displayAuditTable(criteria, model, mockAuthentication);
+
+        // Then
+        assertThat(viewName).isEqualTo("user-audit/users");
+        List<ILoggingEvent> logEvents = listAppender.list;
+        assertThat(logEvents).anySatisfy(event -> assertThat(event.getLevel()).isEqualTo(Level.WARN));
+        
+        logger.detachAppender(listAppender);
+    }
+
+    @Test
     void displayAuditTable_externalSingleFirmUser_firmAutoAppliedInModel() {
         // Given - user can only see external users; their firm is auto-applied server-side
         UUID autoFirmId = UUID.randomUUID();
@@ -1494,7 +1567,7 @@ class AuditControllerTest {
         when(loginService.getCurrentEntraUser(mockAuthentication)).thenReturn(entraUser);
         when(firmService.getUserFirm(entraUser)).thenReturn(Optional.of(FirmDto.builder().id(autoFirmId).name("Auto Firm").build()));
         when(userService.getAuditUsers(anyString(), eq(autoFirmId), any(), any(), any(), anyInt(), anyInt(),
-                anyString(), anyString(), eq(false), any())).thenReturn(mockPaginatedUsers);
+                anyString(), anyString(), eq(false), any(), any(), any(), any())).thenReturn(mockPaginatedUsers);
         when(userService.getAllSilasRoles()).thenReturn(mockSilasRoles);
 
         AuditTableSearchCriteria criteria = new AuditTableSearchCriteria();
@@ -1530,7 +1603,7 @@ class AuditControllerTest {
                 .users(List.of(user)).currentPage(1).pageSize(500).build();
 
         when(userService.getAuditUsers(eq(""), eq(autoFirmId), any(), any(), any(),
-                eq(1), eq(500), eq("name"), eq("asc"), eq(true), any())).thenReturn(singlePage);
+                eq(1), eq(500), eq("name"), eq("asc"), eq(true), any(), any(), any(), any())).thenReturn(singlePage);
 
         byte[] csvBytes = "Name,Email\nJane Doe,jane@example.com\n".getBytes(java.nio.charset.StandardCharsets.UTF_8);
         AuditExportService.AuditCsvExport export = new AuditExportService.AuditCsvExport("audit.csv", csvBytes);
@@ -1543,7 +1616,7 @@ class AuditControllerTest {
         assertThat(response.getStatusCode().is2xxSuccessful()).isTrue();
         assertThat(response.getBody()).isEqualTo(csvBytes);
         verify(userService, times(1)).getAuditUsers("", autoFirmId, null, null,
-                UserTypeForm.ALL_EXTERNAL, 1, 500, "name", "asc", true, null);
+                Arrays.asList(UserTypeForm.EXTERNAL), 1, 500, "name", "asc", true, null, null, null, List.of());
         verify(auditExportService, times(1)).downloadAuditCsv(any(), any(), any());
     }
 
